Compressed media files

--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -37,7 +37,7 @@
   <body>
     <header>
       <!--BS Navbar Start-->
-      <nav class="navbar navbar-expand-sm navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img style="height: 50px;" src="../Assets/Media/MerLogoB.png" alt="logo"/>
@@ -74,8 +74,8 @@
       </nav>
       <!--BS Navbar End-->
     </header>
-    <br />
-    <main class="travelbody">
+
+    <main class="body">
       <div class="row">
         <div class="leftcolumn">
           <div class="card">
@@ -145,7 +145,7 @@
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+            <img class="align-self-center" src="../Assets/Media/MercyFooter.png" alt="">
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
