--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       </section>
       <!-------Gallery End------->
       <!-------Contact Start------->
-      <section class="contact section-padding" data-scroll-index="6">
+      <section class="contact section-padding">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
@@ -252,55 +252,53 @@
               <div class="section-content">
                 <div class="row">
                   <div class="col-sm-12 col-md-12 col-lg-8">
-            <!-- Bootstrap 5 starter form -->
-            <form id="contactForm" method="post" action="">
-
-              <!-- Name input -->
-              <div class="mb-3">
-                  <label class="form-label" for="name">Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name"
-                      data-sb-validations="required" />
-                  <div class="invalid-feedback" data-sb-feedback="name:required">Name is required.</div>
-              </div>
-
-              <!-- Email address input -->
-              <div class="mb-3">
-                  <label class="form-label" for="emailAddress">Email Address</label>
-                  <input class="form-control" id="emailAddress" type="email" placeholder="Email Address"
-                      data-sb-validations="required, email" />
-                  <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.
-                  </div>
-                  <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not
-                      valid.</div>
-              </div>
-
-              <!-- Message input -->
-              <div class="mb-3">
-                  <label class="form-label" for="message">Message</label>
-                  <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"
-                      data-sb-validations="required"></textarea>
-                  <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
-              </div>
-
-              <!-- Form submissions success message -->
-              <div class="d-none" id="submitSuccessMessage">
-                  <div class="text-center mb-3">Form submission successful!</div>
-              </div>
-
-              <!-- Form submissions error message -->
-              <div class="d-none" id="submitErrorMessage">
-                  <div class="text-center text-danger mb-3">Error sending message!</div>
-              </div>
-
-              <!-- Form submit button -->
-              <div class="d-grid">
-                  <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
-              </div>
-
-          </form>
+                    <form id="contact_form" action="">
+                      <div class="row">
+                        <div class="col">
+                          <input
+                            type="text"
+                            id="your_name"
+                            class="form-input w-100"
+                            name="full-name"
+                            placeholder="Full Name"
+                            required
+                          />
+                        </div>
+                        <div class="col">
+                          <input
+                            type="email"
+                            id="email"
+                            class="form-input w-100"
+                            name="email"
+                            placeholder="Email"
+                            required
+                          />
+                        </div>
+                      </div>
+                      <input
+                        type="text"
+                        id="subject"
+                        class="form-input w-100"
+                        name="subject"
+                        placeholder="Subject"
+                      />
+                      <textarea
+                        class="form-input w-100"
+                        id="message"
+                        placeholder="Message"
+                        name="message"
+                      ></textarea>
+                      <button
+                        class="btn-grad w-100 text-uppercase"
+                        type="submit"
+                        name="button"
+                      >
+                        submit
+                      </button>
+                    </form>
                   </div>
                   <div class="col-sm-12 col-md-12 col-lg-4">
-                    <div class="contact-info">
+                    <div class="contact-info white">
                       <div class="contact-item media">
                         <i
                           class="fa fa-map-marker-alt media-left media-right-margin"
@@ -317,21 +315,23 @@
                         <div class="media-body">
                           <p class="text-uppercase">Phone</p>
                           <p class="text-uppercase">
-                            <a class="text-white" href="tel:+573145055932"
-                              >+57 3140000000</a
+                            <a class="text-white" href="tel:+573118251493"
+                              >009900990099</a
                             >
                           </p>
                         </div>
                       </div>
                       <div class="contact-item media">
-                        <i class="fa fa-envelope media-left media-right-margin"></i>
+                        <i
+                          class="fa fa-envelope media-left media-right-margin"
+                        ></i>
                         <div class="media-body">
                           <p class="text-uppercase">E-mail</p>
                           <p class="text-uppercase">
                             <a
                               class="text-white"
                               href="mailto:abcdefg@gmail.com"
-                              >myemail.now@gmail.com</a
+                              >Thisismyemailw@gmail.com</a
                             >
                           </p>
                         </div>
@@ -382,15 +382,20 @@
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
       integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <!-- SB Forms JS for contact card -->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!--Scripts BS End-->
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <!-- scrollIt js -->
+    <script src="js/scrollIt.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <!--Scripts BS End-->
   </body>
 </html>
