--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -34,140 +34,169 @@
     />
   </head>
 
-  <body class="contactB">
+  <body>
     <header>
       <!--BS Navbar Start-->
-      <nav class="navbar navbar-expand-sm navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="../Assets/Media/MerLogoB.png" alt="logo"/>
+            <img
+              style="height: 50px"
+              src="../Assets/Media/MerLogoB.png"
+              alt="logo"
+            />
           </a>
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar">
+            data-bs-target="#collapsibleNavbar"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
         <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./About.html">About me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./travel.html">Travel Tips</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
-                  </ul>
-              </div>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./About.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./travel.html">Travel Tips</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <!--BS Navbar End-->
     </header>
-    <main>
-      <section>
-        <div class="box-main">
-          <div class="firstHalf">
-            <p class="text-big">Ask Me Anything!</p>
+    <main class="body">
+      <section class="contact section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="sectioner-header text-center">
+                <h3>Ask Me Anything!</h3>
+                <span class="line"></span>
+                <p>
+                  Sed quis nisi nisi. Proin consectetur porttitor dui sit amet
+                  viverra. Fusce sit amet lorem faucibus, vestibulum ante in,
+                  pharetra ante.
+                </p>
+              </div>
+              <div class="section-content">
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-8">
+                    <form id="contact_form" action="">
+                      <div class="row">
+                        <div class="col">
+                          <input
+                            type="text"
+                            id="your_name"
+                            class="form-input w-100"
+                            name="full-name"
+                            placeholder="Full Name"
+                            required
+                          />
+                        </div>
+                        <div class="col">
+                          <input
+                            type="email"
+                            id="email"
+                            class="form-input w-100"
+                            name="email"
+                            placeholder="Email"
+                            required
+                          />
+                        </div>
+                      </div>
+                      <input
+                        type="text"
+                        id="subject"
+                        class="form-input w-100"
+                        name="subject"
+                        placeholder="Subject"
+                      />
+                      <textarea
+                        class="form-input w-100"
+                        id="message"
+                        placeholder="Message"
+                        name="message"
+                      ></textarea>
+                      <button
+                        class="btn-grad w-100 text-uppercase"
+                        type="submit"
+                        name="button"
+                      >
+                        submit
+                      </button>
+                    </form>
+                  </div>
+                  <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="contact-info white">
+                      <div class="contact-item media">
+                        <i
+                          class="fa fa-map-marker-alt media-left media-right-margin"
+                        ></i>
+                        <div class="media-body">
+                          <p class="text-uppercase">Address</p>
+                          <p class="text-uppercase">Bogotá, Colombia</p>
+                        </div>
+                      </div>
+                      <div class="contact-item media">
+                        <i
+                          class="fa fa-mobile media-left media-right-margin"
+                        ></i>
+                        <div class="media-body">
+                          <p class="text-uppercase">Phone</p>
+                          <p class="text-uppercase">
+                            <a class="text-white" href="tel:+573118251493"
+                              >009900990099</a
+                            >
+                          </p>
+                        </div>
+                      </div>
+                      <div class="contact-item media">
+                        <i
+                          class="fa fa-envelope media-left media-right-margin"
+                        ></i>
+                        <div class="media-body">
+                          <p class="text-uppercase">E-mail</p>
+                          <p class="text-uppercase">
+                            <a
+                              class="text-white"
+                              href="mailto:abcdefg@gmail.com"
+                              >Thisismyemailw@gmail.com</a
+                            >
+                          </p>
+                        </div>
+                      </div>
+                      <div class="contact-item media">
+                        <i
+                          class="fa fa-clock media-left media-right-margin"
+                        ></i>
+                        <div class="media-body">
+                          <p class="text-uppercase">Working Hours</p>
+                          <p class="text-uppercase">
+                            Mon-Fri 9.00 AM to 5.00PM.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </section>
-      <section>
-        <h1 class="h-primary">
-          Feel free to ask me any questions about my travels, or blog or if you
-          have any business inquiries.
-        </h1>
-        <div class="container py-4">
-          <!-- Bootstrap 5 starter form -->
-          <form id="contactForm">
-            <!-- Name input -->
-            <div class="mb-3">
-              <label class="form-label" for="name">Name</label>
-              <input
-                class="form-control"
-                id="name"
-                type="text"
-                placeholder="Name"
-                data-sb-validations="required"
-              />
-              <div class="invalid-feedback" data-sb-feedback="name:required">
-                Name is required.
-              </div>
-            </div>
-
-            <!-- Email address input -->
-            <div class="mb-3">
-              <label class="form-label" for="emailAddress">Email Address</label>
-              <input
-                class="form-control"
-                id="emailAddress"
-                type="email"
-                placeholder="Email Address"
-                data-sb-validations="required, email"
-              />
-              <div
-                class="invalid-feedback"
-                data-sb-feedback="emailAddress:required"
-              >
-                Email Address is required.
-              </div>
-              <div
-                class="invalid-feedback"
-                data-sb-feedback="emailAddress:email"
-              >
-                Email Address Email is not valid.
-              </div>
-            </div>
-
-            <!-- Message input -->
-            <div class="mb-3">
-              <label class="form-label" for="message">Message</label>
-              <textarea
-                class="form-control"
-                id="message"
-                type="text"
-                placeholder="Message"
-                style="height: 10rem"
-                data-sb-validations="required"
-              ></textarea>
-              <div class="invalid-feedback" data-sb-feedback="message:required">
-                Message is required.
-              </div>
-            </div>
-
-            <!-- Form submissions success message -->
-            <div class="d-none" id="submitSuccessMessage">
-              <div class="text-center mb-3">Form submission successful!</div>
-            </div>
-
-            <!-- Form submissions error message -->
-            <div class="d-none" id="submitErrorMessage">
-              <div class="text-center text-danger mb-3">
-                Error sending message!
-              </div>
-            </div>
-
-            <!-- Form submit button -->
-            <div class="d-grid">
-              <button
-                class="btn btn-primary btn-lg"
-                id="submitButton"
-                type="submit"
-              >
-                Submit
-              </button>
-            </div>
-          </form>
         </div>
       </section>
     </main>
@@ -176,15 +205,35 @@
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+            <img
+              class="align-self-center"
+              src="../Assets/Media/MercyFooter.png"
+              alt=""
+            />
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
-            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
-            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+            <a
+              class="text-body-secondary"
+              href="https://www.instagram.com/mercymolano?utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram fa-beat"></i
+            ></a>
+            <a
+              class="text-body-secondary"
+              href="https://wa.link/ycoea4"
+              target="_blank"
+              ><i class="fa-brands fa-whatsapp fa-beat"></i
+            ></a>
+            <a
+              class="text-body-secondary"
+              href="https://co.linkedin.com/in/mercymoreno"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin fa-beat"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -203,6 +252,13 @@
       integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
       crossorigin="anonymous"
     ></script>
+    <!-- SB Forms JS for contact card -->
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!--Scripts BS End-->
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <!-- scrollIt js -->
+    <script src="js/scrollIt.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <!--Scripts BS End-->
   </body>
 </html>
