adding animation to submit button

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                     habitant morbi tristique senectus et netus et malesuada
                     fames ac turpis egestas.
                   </p>
+                  <ul>
+                    <li><a href="#">MY STORY</a></li>
+                  </ul>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
@@ -289,11 +292,11 @@
                         name="message"
                       ></textarea>
                       <button
-                        class="btn-grad w-100 text-uppercase"
+                        class="btn btn-grad w-100 text-uppercase"
                         type="submit"
                         name="button"
                       >
-                        submit
+                      <span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62">
                       </button>
                     </form>
                   </div>
