--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -133,11 +133,10 @@
                         name="message"
                       ></textarea>
                       <button
-                        class="btn-grad w-100 text-uppercase"
+                        class="btn-grad w-100 text-uppercase .cont"
                         type="submit"
-                        name="button"
-                      >
-                        submit
+                        name="button">
+                        <span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62">
                       </button>
                     </form>
                   </div>
