added submit button animation

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -74,7 +74,7 @@
                   <form id="contact_form" action="">
                     <div class="row">
                       <div class="col">
-                        <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="Full Name" required />
+                        <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="Full Name" required/>
                       </div>
                       <div class="col">
                         <input type="email" id="email" class="form-input w-100" name="email" placeholder="Email" required />
@@ -82,9 +82,11 @@
                     </div>
                     <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="Subject" />
                     <textarea class="form-input w-100" id="message" placeholder="Message" name="message"></textarea>
-                    <button class="btn-grad w-100 text-uppercase" type="submit" name="button">
+                    <div class="wrapper">
+                      <button class="btn-grad w-100 text-uppercase" type="submit" name="button">
                       <span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="32" width="32">
                     </button>
+                    </div>
                   </form>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-4">
