--- a/index.html
+++ b/index.html
@@ -81,20 +81,16 @@
         <div class="banner-overlay">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-sm-12">
-                <div class="banner-content">
-                  <h2 class="banner-title">Hi! I'm Lorem ipsum the Traveler</h2>
-                  <p class="banner-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Curabitur hendrerit neque massa, sit amet tristique ante
-                    porta ut. In sodales et justo vel vulputate. Pellentesque
-                    habitant morbi tristique senectus et netus et malesuada
-                    fames ac turpis egestas.
-                  </p>
-                  <ul>
-                    <li><a href="#">MY STORY</a></li>
-                  </ul>
-                </div>
+              <div class="col-md-8 col-sm-12 banner-content">
+                <h2 class="banner-title">Hi! I'm Lorem ipsum the Traveler</h2>
+                <p class="banner-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur hendrerit neque massa, sit amet tristique ante
+                  porta ut. In sodales et justo vel vulputate. Pellentesque
+                  habitant morbi tristique senectus et netus et malesuada
+                  fames ac turpis egestas.
+                </p>
+                <a href="./Pages/About.html">MY STORY</a>
               </div>
               <div class="col-md-4 col-sm-12">
                 <img
@@ -291,13 +287,11 @@
                         placeholder="Message"
                         name="message"
                       ></textarea>
-                      <button
-                        class="btn btn-grad w-100 text-uppercase"
-                        type="submit"
-                        name="button"
-                      >
-                      <span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="62" width="62">
+                      <div class="wrapper">
+                        <button class="btn-grad w-100 text-uppercase" type="submit" name="button">
+                        <span>Submit</span><img src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png" height="32" width="32">
                       </button>
+                      </div>
                     </form>
                   </div>
                   <div class="col-sm-12 col-md-12 col-lg-4">
