improve index, improving images format

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+  name="description"
+  content="Welcome to my world of adventure, cuisine, and trading! Join me on a journey where I explore the globe, savor delectable dishes, and delve into the exciting world of trading. Get to know the traveler, food enthusiast, and trader within me as I share my experiences, insights, and passions with you."
+/>
     <title>Contact Me</title>
     <!-- Icon for title -->
     <link rel="shortcut icon" href="../Assets/Media/Mercy.png" type="image/x-icon">
@@ -65,7 +69,7 @@
         <section class="about-section" id="hero">
             <div>
                 <img src="../Assets/Media/Mercy.png" class="profile-img">
-                <h1>Hi, I'm Lorem the Traveler.</h1>
+                <h1>Hi, I'm Mo the Traveler.</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est
                     nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia
                     nisi. Sit quos similique magni?</p>
