--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+  name="description"
+  content="Feel free to ask me any questions about my travels, blog, or if you have any business inquiries. Contact me by filling out the form below or sending an email to [Your Email Address]. I'm here to assist and look forward to connecting with you!"
+/>
   <title>Contact Me</title>
   <!-- Icon for title -->
   <link rel="shortcut icon" href="../Assets/Media/Mercy.png" type="image/x-icon" />
