--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <meta
+  name="description"
+  content="Dive into a world of creativity and innovation with our portfolio. Explore a curated collection of our finest work, showcasing design excellence, technical expertise, and a passion for innovation. Discover how we turn ideas into stunning realities and make an impact in the digital realm."
+/>
+    <title>Portfolio</title>
     <!-- Icon for title -->
     <link rel="shortcut icon" href="../Assets/Media/Mercy.png" type="image/x-icon">
     <!--BS 5.3 Start-->
