--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+  name="description"
+  content="Unlock the world of travel with our blog tips! Find expert advice on planning your next adventure, packing smart, budgeting effectively, and making the most of your travel experiences. Join us as we share invaluable insights to help you navigate the globe like a seasoned traveler."
+/>
     <title>Contact Me</title>
     <!-- Icon for title -->
     <link
