--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-md-4 col-sm-12">
                 <img
                   src="./Assets/Media/zen.png"
-                  class="img-fluid banner-img"
+                  class="banner-img"
                 />
               </div>
             </div>
@@ -113,10 +113,12 @@
             <h2 id="about"><a href="./Pages/About.html">About Me</a></h2>
             <span class="line"></span>
           </div>
-            <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img about-section1--img">
+          <div class="about-content">
+            <img src="./Assets/Media/Mercy.png" class="profile-img about-section1--img">
             <h1>Hi, I'm Mo the Traveler.</h1>
             <h2 id="about"><a href="./Pages/About.html">My Story</a></h2>
             <p class="about-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi. Sit quos similique magni?</p>
+          </div>
         </div>
       </section>
       <!-------About End------->
@@ -197,7 +199,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/People.JPG" alt="Bogotá">
+                        <img src="./Assets/Media/People.webp" alt="Bogotá">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -207,17 +209,17 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/Mer.png" alt="Bogotá">
+                        <img src="./Assets/Media/Mer.webp" alt="Bogotá">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/graffiti.jpeg" alt="Bogotá">
+                        <img src="./Assets/Media/graffiti.webp" alt="Bogotá">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/fade.JPG" alt="Bogotá">
+                        <img src="./Assets/Media/fade.webp" alt="Bogotá">
                     </div>
                 </div>
             </div>
