--- a/Pages/About.html
+++ b/Pages/About.html
@@ -10,7 +10,7 @@
 />
     <title>Contact Me</title>
     <!-- Icon for title -->
-    <link rel="shortcut icon" href="../Assets/Media/Mercy.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Assets/Media/Mercy.webp" type="image/x-icon">
     <!--BS 5.3 Start-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -68,7 +68,7 @@
     <main class="body">
         <section class="about-section" id="hero">
             <div>
-                <img src="../Assets/Media/Mercy.png" class="profile-img">
+                <img src="../Assets/Media/Mercy.webp" class="profile-img">
                 <h1>Hi, I'm Mo the Traveler.</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est
                     nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia
@@ -113,7 +113,7 @@
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="../Assets/Media/MercyFooter.png" alt="">
+            <img class="align-self-center" src="../Assets/Media/MercyFooter.webp" alt="">
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
