--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -10,7 +10,7 @@
 />
   <title>Contact Me</title>
   <!-- Icon for title -->
-  <link rel="shortcut icon" href="../Assets/Media/Mercy.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../Assets/Media/Mercy.webp" type="image/x-icon" />
   <!--BS 5.3 Start-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/wowjs@1.1.3/dist/wow.min.js">
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img style="height: 50px" src="../Assets/Media/MerLogoB.png" alt="logo" />
+          <img style="height: 50px" src="../Assets/Media/MerLogoB.webp" alt="logo" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -143,7 +143,7 @@
     <div class="container-fluid footer">
       <div class="row justify-content-center">
         <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-          <img class="align-self-center" src="../Assets/Media/MercyFooter.png" alt="" />
+          <img class="align-self-center" src="../Assets/Media/MercyFooter.webp" alt="" />
         </div>
         <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
           © 2023 All rights reserved
