--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -11,7 +11,7 @@
     <!-- Icon for title -->
     <link
       rel="shortcut icon"
-      href="../Assets/Media/Mercy.png"
+      href="../Assets/Media/Mercy.webp"
       type="image/x-icon"
     />
     <!--BS 5.3 Start-->
@@ -44,7 +44,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="../Assets/Media/MerLogoB.png" alt="logo"/>
+            <img style="height: 50px;" src="../Assets/Media/MerLogoB.webp" alt="logo"/>
           </a>
           <button
             class="navbar-toggler"
@@ -86,11 +86,6 @@
             <h2>TITLE HEADING</h2>
             <h5>Title description, Dec 7, 2017</h5>
             <div class="fakeimg" style="height: 200px">
-              <img
-                style="height: 200px"
-                src="https://picsum.photos/id/10/2500/1667"
-                alt=""
-              />
             </div>
             <p>Some text..</p>
             <p>
@@ -104,11 +99,6 @@
             <h2>TITLE HEADING</h2>
             <h5>Title description, Sep 2, 2017</h5>
             <div class="fakeimg" style="height: 200px">
-              <img
-                style="height: 200px"
-                src="https://picsum.photos/id/10/2500/1667"
-                alt=""
-              />
             </div>
             <p>Some text..</p>
             <p>
@@ -123,7 +113,6 @@
           <div class="card">
             <h2><a href="./About.html">About Me</a></h2>
             <div class="fakeimg1" style="height: 100px">
-              <img src="../Assets/Media/Mercy.png" alt="" />
             </div>
             <p>
               Some text about me in culpa qui officia deserunt mollit anim..
@@ -149,7 +138,7 @@
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="../Assets/Media/MercyFooter.png" alt="">
+            <img class="align-self-center" src="../Assets/Media/MercyFooter.webp" alt="">
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
