--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Icon for pages -->
     <link
       rel="shortcut icon"
-      href="./Assets/Media/Mercy.png"
+      href="./Assets/Media/Mercy.webp"
       type="image/x-icon"/>
     <!--BS 5.3 Start-->
     <link
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="./Assets/Media/MerLogoB.png" alt="logo"/>
+            <img style="height: 50px;" src="./Assets/Media/MerLogoB.webp" alt="logo"/>
           </a>
           <button
             class="navbar-toggler"
@@ -94,7 +94,7 @@
               </div>
               <div class="col-md-4 col-sm-12">
                 <img
-                  src="./Assets/Media/zen.png"
+                  src="./Assets/Media/zen.webp"
                   class="banner-img"
                 />
               </div>
@@ -114,7 +114,7 @@
             <span class="line"></span>
           </div>
           <div class="about-content">
-            <img src="./Assets/Media/Mercy.png" class="profile-img about-section1--img">
+            <img src="./Assets/Media/Mercy.webp" class="profile-img about-section1--img">
             <h1>Hi, I'm Mo the Traveler.</h1>
             <h2 id="about"><a href="./Pages/About.html">My Story</a></h2>
             <p class="about-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi. Sit quos similique magni?</p>
@@ -189,12 +189,12 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/Water.png" alt="Tominé">
+                        <img src="./Assets/Media/Water.webp" alt="Tominé">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/Rest.jpeg" alt="Bogotá">
+                        <img src="./Assets/Media/Rest.webp" alt="Bogotá">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -204,7 +204,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
-                        <img src="./Assets/Media/monument.png" alt="Bogotá">
+                        <img src="./Assets/Media/monument.webp" alt="Bogotá">
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -361,7 +361,7 @@
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+            <img class="align-self-center" src="./Assets/Media/MercyFooter.webp" alt="">
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
