--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-  name="description"
-  content="Unlock the world of travel with our blog tips! Find expert advice on planning your next adventure, packing smart, budgeting effectively, and making the most of your travel experiences. Join us as we share invaluable insights to help you navigate the globe like a seasoned traveler."
-/>
+      name="description"
+      content="Unlock the world of travel with our blog tips! Find expert advice on planning your next adventure, packing smart, budgeting effectively, and making the most of your travel experiences. Join us as we share invaluable insights to help you navigate the globe like a seasoned traveler."
+    />
+    <meta
+      name="keywords"
+      content="travel blog, travel tips, expert advice, adventure planning, smart packing, budget travel, travel experiences, seasoned traveler, globe-trotting, travel insights"
+    />
     <title>Contact Me</title>
     <!-- Icon for title -->
     <link
@@ -44,36 +48,41 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="../Assets/Media/MerLogoB.webp" alt="logo"/>
+            <img
+              style="height: 50px"
+              src="../Assets/Media/MerLogoB.webp"
+              alt="logo"
+            />
           </a>
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar">
+            data-bs-target="#collapsibleNavbar"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
         <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./About.html">About me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./travel.html">Travel Tips</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
-                  </ul>
-              </div>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./About.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./travel.html">Travel Tips</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <!--BS Navbar End-->
@@ -85,8 +94,7 @@
           <div class="card">
             <h2>TITLE HEADING</h2>
             <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height: 200px">
-            </div>
+            <div class="fakeimg" style="height: 200px"></div>
             <p>Some text..</p>
             <p>
               Sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -98,8 +106,7 @@
           <div class="card">
             <h2>TITLE HEADING</h2>
             <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height: 200px">
-            </div>
+            <div class="fakeimg" style="height: 200px"></div>
             <p>Some text..</p>
             <p>
               Sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -112,8 +119,7 @@
         <div class="rightcolumn">
           <div class="card">
             <h2><a href="./About.html">About Me</a></h2>
-            <div class="fakeimg1" style="height: 100px">
-            </div>
+            <div class="fakeimg1" style="height: 100px"></div>
             <p>
               Some text about me in culpa qui officia deserunt mollit anim..
             </p>
@@ -138,15 +144,35 @@
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="../Assets/Media/MercyFooter.webp" alt="">
+            <img
+              class="align-self-center"
+              src="../Assets/Media/MercyFooter.webp"
+              alt=""
+            />
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
-            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
-            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+            <a
+              class="text-body-secondary"
+              href="https://www.instagram.com/mercymolano?utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram fa-beat"></i
+            ></a>
+            <a
+              class="text-body-secondary"
+              href="https://wa.link/ycoea4"
+              target="_blank"
+              ><i class="fa-brands fa-whatsapp fa-beat"></i
+            ></a>
+            <a
+              class="text-body-secondary"
+              href="https://co.linkedin.com/in/mercymoreno"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin fa-beat"></i
+            ></a>
           </div>
         </div>
       </div>
