--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -1,106 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-  name="description"
-  content="Dive into a world of creativity and innovation with our portfolio. Explore a curated collection of our finest work, showcasing design excellence, technical expertise, and a passion for innovation. Discover how we turn ideas into stunning realities and make an impact in the digital realm."
-/>
+      name="description"
+      content="Dive into a world of creativity and innovation with our portfolio. Explore a curated collection of our finest work, showcasing design excellence, technical expertise, and a passion for innovation. Discover how we turn ideas into stunning realities and make an impact in the digital realm."
+    />
+    <meta
+      name="keywords"
+      content="portfolio, creativity, innovation, design excellence, technical expertise, digital impact, curated collection, finest work, turning ideas into reality, digital realm"
+    />
     <title>Portfolio</title>
     <!-- Icon for title -->
-    <link rel="shortcut icon" href="../Assets/Media/Mercy.webp" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../Assets/Media/Mercy.webp"
+      type="image/x-icon"
+    />
     <!--BS 5.3 Start-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <!-- CSS -->
-    <link rel="stylesheet" href="../Assets/CSS/styles.css">
+    <link rel="stylesheet" href="../Assets/CSS/styles.css" />
     <!-- The hamburger menu for small screens -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<body>
-  <header>
-    <!--BS Navbar Start-->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img style="height: 50px;" src="../Assets/Media/MerLogoB.webp" alt="logo"/>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-      <div class="container-fluid">
+  <body>
+    <header>
+      <!--BS Navbar Start-->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              style="height: 50px"
+              src="../Assets/Media/MerLogoB.webp"
+              alt="logo"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapsibleNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <div class="container-fluid">
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./About.html">About me</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./travel.html">Travel Tips</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./gallery.html">Gallery</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contacts</a>
-                  </li>
-                </ul>
-            </div>
-      </div>
-    </nav>
-    <!--BS Navbar End-->
-  </header>
-    <br>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./About.html">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./travel.html">Travel Tips</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!--BS Navbar End-->
+    </header>
+    <br />
     <main class="body">
-        <section class="galeria">
-            <div class="item item1"></div>
-            <div class="item item2"></div>
-            <div class="item item3"></div>
-            <div class="item item4"></div>
-            <div class="item item5"></div>
-            <div class="item item6"></div>
-            <div class="item item7"></div>
-            <div class="item item8"></div> 
-            <div class="item item9"></div>            
-            <div class="item item10"></div>            
-            <div class="item item11"></div>            
-            <div class="item item12"></div>            
-            <div class="item item13"></div>   
-            <div class="item item14"></div>            
-            <div class="item item15"></div>            
-            <div class="item item16"></div>            
-            <div class="item item17"></div>           
-            <div class="item item18"></div>           
-        </section>
+      <section class="galeria">
+        <div class="item item1"></div>
+        <div class="item item2"></div>
+        <div class="item item3"></div>
+        <div class="item item4"></div>
+        <div class="item item5"></div>
+        <div class="item item6"></div>
+        <div class="item item7"></div>
+        <div class="item item8"></div>
+        <div class="item item9"></div>
+        <div class="item item10"></div>
+        <div class="item item11"></div>
+        <div class="item item12"></div>
+        <div class="item item13"></div>
+        <div class="item item14"></div>
+        <div class="item item15"></div>
+        <div class="item item16"></div>
+        <div class="item item17"></div>
+        <div class="item item18"></div>
+      </section>
     </main>
     <!-------Footer Start------->
     <footer>
       <div class="container-fluid footer">
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
-            <img class="align-self-center" src="../Assets/Media/MercyFooter.webp" alt="">
+            <img
+              class="align-self-center"
+              src="../Assets/Media/MercyFooter.webp"
+              alt=""
+            />
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
             © 2023 All rights reserved
           </div>
           <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
-            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
-            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
-            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+            <a
+              class="text-body-secondary"
+              href="https://www.instagram.com/mercymolano?utm_source=qr"
+              target="_blank"
+            >
+              <i class="fa-brands fa-instagram fa-beat"></i
+            ></a>
+            <a
+              class="text-body-secondary"
+              href="https://wa.link/ycoea4"
+              target="_blank"
+              ><i class="fa-brands fa-whatsapp fa-beat"></i
+            ></a>
+            <a
+              class="text-body-secondary"
+              href="https://co.linkedin.com/in/mercymoreno"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin fa-beat"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -109,13 +152,16 @@
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
 
     <!--Scripts BS Start-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      crossorigin="anonymous"
+    ></script>
     <!--Scripts BS End-->
-</body>
-
+  </body>
 </html>
