Correcting Logo Redirection

--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -47,7 +47,7 @@
       <!--BS Navbar Start-->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <img
               style="height: 50px"
               src="../Assets/Media/MerLogoB.webp"
