--- a/Pages/About.html
+++ b/Pages/About.html
@@ -47,10 +47,10 @@
       <!--BS Navbar Start-->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <img
               style="height: 50px"
-              src="../Assets/Media/MerLogoB.png"
+              src="../Assets/Media/MerLogoB.webp"
               alt="logo"
             />
           </a>
