Complete travel, contact, about, index

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -92,35 +92,31 @@
       <section class="about-section" id="hero">
         <div>
           <img src="../Assets/Media/Mercy.webp" class="profile-img" />
-          <h1>Hi, I'm Mo the Traveler.</h1>
+          <h1>Hi, I'm Mo.</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates
-            exercitationem deleniti quo est nihil? Deserunt assumenda maxime
-            maiores expedita ducimus corporis unde facilis similique mollitia
-            nisi. Sit quos similique magni?
+            Meet Mo, your friendly globetrotting companion, and join her on an exciting journey around the world. Mo is not just any traveler; she's a storyteller, adventurer, and explorer rolled into one. In this captivating adventure, Mo will take you on a voyage filled with intriguing tales, breathtaking landscapes, and cultural encounters that will leave you inspired and yearning for your own adventures.
           </p>
         </div>
       </section>
-
       <section class="about-section" id="hero">
         <div class="results">
           <h3>Some of the Results I'm Proud of</h3>
           <div class="section-inner">
             <div class="section-inner2">
-              <p class="about-data">###</p>
-              <p class="about-label">Lorem ipsum</p>
+              <p class="about-data">20</p>
+              <p class="about-label">Countries Visited</p>
             </div>
             <div class="section-inner2">
-              <p class="about-data">###</p>
-              <p class="about-label">Lorem ipsum</p>
+              <p class="about-data">150</p>
+              <p class="about-label">Cities Visited</p>
             </div>
             <div class="section-inner2">
-              <p class="about-data">###</p>
-              <p class="about-label">Lorem ipsum</p>
+              <p class="about-data">80,000+</p>
+              <p class="about-label">Photos Taken</p>
             </div>
             <div class="section-inner2">
-              <p class="about-data">###</p>
-              <p class="about-label">Lorem ipsum</p>
+              <p class="about-data">50</p>
+              <p class="about-label">Blog Articles</p>
             </div>
           </div>
         </div>
