--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <a class="nav-link" href="./Pages/gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/contact.html">Contacts</a>
+                <a class="nav-link" href="./Pages/contact.html">Contact me</a>
               </li>
             </ul>
           </div>
@@ -96,13 +96,9 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-sm-12 banner-content">
-                <h2 class="banner-title">Hi! I'm Lorem ipsum the Traveler</h2>
+                <h2 class="banner-title">Hi! I'm Mo the Traveler</h2>
                 <p class="banner-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Curabitur hendrerit neque massa, sit amet tristique ante porta
-                  ut. In sodales et justo vel vulputate. Pellentesque habitant
-                  morbi tristique senectus et netus et malesuada fames ac turpis
-                  egestas.
+                  Meet Mo, your friendly globetrotting companion, and join her on an exciting journey around the world. Mo is not just any traveler; she's a storyteller, adventurer, and explorer rolled into one. In this captivating adventure, Mo will take you on a voyage filled with intriguing tales, breathtaking landscapes, and cultural encounters that will leave you inspired and yearning for your own adventures.
                 </p>
                 <a href="./Pages/About.html">MY STORY</a>
               </div>
@@ -113,7 +109,7 @@
           </div>
         </div>
         <span class="svg-wave">
-          <img class="svg-hero" src="./Assets/Media/wave.svg" />
+          <img class="svg-hero" src="./Assets/Media/wave.svg" alt="wave"/>
         </span>
       </section>
       <!-------Banner End------->
@@ -124,7 +120,7 @@
       >
         <div>
           <div class="sectioner-header text-center">
-            <h2 id="about"><a href="./Pages/About.html">About Me</a></h2>
+            <h2 ><a href="./Pages/About.html">About Me</a></h2>
             <span class="line"></span>
           </div>
           <div class="about-content">
@@ -133,12 +129,9 @@
               class="profile-img about-section1--img"
             />
             <h1>Hi, I'm Mo the Traveler.</h1>
-            <h2 id="about"><a href="./Pages/About.html">My Story</a></h2>
+            <h2 ><a href="./Pages/About.html">My Story</a></h2>
             <p class="about-text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Voluptates exercitationem deleniti quo est nihil? Deserunt
-              assumenda maxime maiores expedita ducimus corporis unde facilis
-              similique mollitia nisi. Sit quos similique magni?
+              "Embrace the Unknown, Explore the Unseen, and Discover Your Journey."
             </p>
           </div>
         </div>
@@ -151,7 +144,7 @@
             <h2 id="travel"><a href="./Pages/travel.html">Travel Tips</a></h2>
             <span class="line"></span>
           </div>
-          <div class="container">
+          <div class="container pt-2">
             <div class="sec2-travel-video">
               <a href="./Pages/travel.html"
                 ><video
@@ -163,14 +156,11 @@
                 ></video
               ></a>
               <a id="sec2-travel-title-tip1" href="./Pages/travel.html">
-                <h1>Lorem 1</h1>
+                <h1>Prague</h1>
               </a>
               <a id="sec2-travel-text-tip1" href="./Pages/travel.html">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                  tempore, dicta quas enim provident ut, dolorem qui impedit est
-                  optio eligendi vitae. Veritatis nostrum voluptatibus id
-                  perferendis quia obcaecati vel.
+                  Where history whispers through every charming street corner. 🏰🇨🇿 #PragueMagic
                 </p>
               </a>
               <a href="./Pages/travel.html"
@@ -183,14 +173,11 @@
                 ></video
               ></a>
               <a id="sec2-travel-title-tip2" href="./Pages/travel.html">
-                <h1>Lorem 2</h1>
+                <h1>Venice</h1>
               </a>
               <a id="sec2-travel-text-tip2" href="./Pages/travel.html">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                  tempore, dicta quas enim provident ut, dolorem qui impedit est
-                  optio eligendi vitae. Veritatis nostrum voluptatibus id
-                  perferendis quia obcaecati vel.
+                  A timeless maze of canals and dreams. 🚣‍♂️✨ #VenetianSplendor
                 </p>
               </a>
               <a href="./Pages/travel.html"
@@ -203,14 +190,11 @@
                 ></video
               ></a>
               <a id="sec2-travel-title-tip3" href="./Pages/travel.html">
-                <h1>Lorem 3</h1>
+                <h1>Florencia</h1>
               </a>
               <a id="sec2-travel-text-tip3" href="./Pages/travel.html">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                  tempore, dicta quas enim provident ut, dolorem qui impedit est
-                  optio eligendi vitae. Veritatis nostrum voluptatibus id
-                  perferendis quia obcaecati vel.
+                  Florence, where art, history, and beauty converge! A city that steals your heart with every cobblestone street and Renaissance masterpiece. 🇮🇹❤️ #FlorenceMagic
                 </p>
               </a>
             </div>
@@ -221,7 +205,7 @@
       <!-------Gallery Start------->
       <section class="section-padding" id="gallery">
         <div class="sectioner-header text-center">
-          <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
+          <h2><a href="./Pages/gallery.html">Gallery</a></h2>
           <span class="line"></span>
         </div>
         <!-- Complete Carousel Start -->
@@ -310,16 +294,14 @@
             class="carousel-control-prev"
             type="button"
             data-bs-target="#galleryC"
-            data-bs-slide="prev"
-          >
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
           </button>
           <button
             class="carousel-control-next"
             type="button"
             data-bs-target="#galleryC"
-            data-bs-slide="next"
-          >
+            data-bs-slide="next">
             <span class="carousel-control-next-icon"></span>
           </button>
           <!-- Left and right controls -->
@@ -333,12 +315,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sectioner-header text-center">
-                <h3>Ask Me Anything!</h3>
+                <h2><a href="./Pages/contact.html">Ask Me Anything!</a></h2>
                 <span class="line"></span>
                 <p>
-                  Sed quis nisi nisi. Proin consectetur porttitor dui sit amet
-                  viverra. Fusce sit amet lorem faucibus, vestibulum ante in,
-                  pharetra ante.
+                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to <span><a href="mailto:motraveler@gmail.com" data-action="email">motraveler@email.com</a></span>
                 </p>
               </div>
               <div class="section-content">
@@ -430,7 +410,7 @@
                             <a
                               class="text-white"
                               href="mailto:abcdefg@gmail.com"
-                              >Thisismyemailw@gmail.com</a
+                              >motraveler@email.com</a
                             >
                           </p>
                         </div>
@@ -464,7 +444,7 @@
             <img
               class="align-self-center"
               src="./Assets/Media/MercyFooter.webp"
-              alt=""
+              alt="Traveler Logo"
             />
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
