--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -97,12 +97,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sectioner-header text-center">
-                <h3>Ask Me Anything!</h3>
+                <h2>Ask Me Anything!</h2>
                 <span class="line"></span>
                 <p>
-                  Sed quis nisi nisi. Proin consectetur porttitor dui sit amet
-                  viverra. Fusce sit amet lorem faucibus, vestibulum ante in,
-                  pharetra ante.
+                  Feel free to ask my any question about my travels, blog or if you have any business inquires. Fill out the form below or send me an email to motravel@email.com
                 </p>
               </div>
               <div class="section-content">
