--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -118,7 +118,7 @@
             <img
               class="align-self-center"
               src="../Assets/Media/MercyFooter.webp"
-              alt=""
+              alt="Logo"
             />
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
