Fixing colors in fonts

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -192,7 +192,7 @@
                             <a
                               class="text-white"
                               href="mailto:abcdefg@gmail.com"
-                              >Thisismyemailw@gmail.com</a
+                              >motraveler@gmail.com</a
                             >
                           </p>
                         </div>
